# 10ways2do

./: .gitattributes  .gitignore  CONTRIBUTING.md  LICENSE  PROJECT_STATUS.md  README.md  RUNNING.md  main.py  pyproject.toml  requirements.txt
.github/: pull_request_template.md
.github/workflows/: auto-scaling-nightly.yml  benchmark-smoke.yml  full-regression.yml  leaderboard-publish.yml  nightly-publish-ready.yml  release-quality-gate.yml
config/: __init__.py  settings.py
docs/: API.md  ARCHITECTURE.md  BRANCH_PROTECTION_POLICY.md  METHODOLOGY.md  RELEASE_CHECKLIST.md
notebooks/: 01_domain_a_exploration.ipynb  02_domain_b_exploration.ipynb  03_domain_c_exploration.ipynb  04_domain_d_exploration.ipynb  05_cross_domain_insights.ipynb  05_cross_domain_insights_backup.ipynb
releases/v1.1-local/: SNAPSHOT.md  snapshot.json
releases/v1.1-publish/: SNAPSHOT.md  (+2 more)
restored_results_frontier_verify/: CROSS_DOMAIN_FRONTIER.json  REPORT.md
src/: __init__.py
tests/: __init__.py  test_artifact_validator.py  test_benchmark_card.py  test_benchmark_smoke_artifacts.py  test_domain_a.py  test_domain_b.py  test_domain_c.py  test_domain_d.py  test_domain_f.py  test_domain_g.py  test_domain_h.py  test_domain_i.py  test_domain_j.py  test_domain_k.py  test_policy_simulator.py  test_publish_ready.py  test_release_gate.py  test_release_snapshot.py  test_report_significance_summary.py  test_snapshot_restore.py  test_snapshot_retention.py  test_strategy_playbook.py
website/: app.js  charts.js  domain.html  domain.js  index.html  leaderboard.html  results-loader.js  styles.css
(+164 files in other folders)
