[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ml-philosophy-benchmark"
version = "1.0.0"
description = "10 ML Paradigms Across 5 Domains"
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.20.0",
    "pandas>=1.3.0",
    "scikit-learn>=1.0.0",
    "torch>=1.9.0",
    "tqdm>=4.60.0",
]

[project.optional-dependencies]
full = [
    "transformers>=4.20.0",
    "xgboost>=1.5.0",
    "statsmodels>=0.13.0",
    "matplotlib>=3.5.0",
    "seaborn>=0.11.0",
]

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310"]

[tool.isort]
profile = "black"
line_length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"